# crewai_research_writer

./: README.md  pyproject.toml  report.md
src/crewai_research_agent/: crew.py  gui.py  main.py
src/crewai_research_agent/config/: agents.yaml  tasks.yaml
src/crewai_research_agent/tools/: email_sender.py
