[project]
name = "crewai_research_agent"
version = "0.1.0"
description = "crewai_research_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.11.1"
]

[project.scripts]
crewai_research_agent = "crewai_research_agent.main:run"
run_crew = "crewai_research_agent.main:run"
train = "crewai_research_agent.main:train"
replay = "crewai_research_agent.main:replay"
test = "crewai_research_agent.main:test"
run_with_trigger = "crewai_research_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
